[Design&Add] Add Masonry to `shares_overview`
[Masonry](http://masonry.desandro.com/) is a Javascript library for
laying out elements in the "masonry"-style.

+ base.html: Add `javascript_extra` block to bottom of document
+ Gruntfile.js: Move `jquery-throttle-debounce` from trainer.js to
user.js

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -220,6 +220,8 @@
         });
     })(jQuery);
     {% endif %}
+
+    {% block javascript_extra %}{% endblock %}
   </script>
 
   {% get_solo 'global_change_lab.SiteConfiguration' as site_config %}
