[Design] Link to login (not signup) when not logged in
Link to login on the "Start skill" button and the like button
(the "start training bit" was already linking to login)

--- a/skills/templates/skills/partials/like_button.html
+++ b/skills/templates/skills/partials/like_button.html
@@ -11,7 +11,7 @@
   {% endif %}
 </a>
 {% else %}
-<a class="button small like signup" href="{% url 'account_signup' %}">
-  <span class="icon heart"></span>Sign up to like
+<a class="button small like signup" href="{% url 'account_login' %}">
+  <span class="icon heart"></span>Sign in to like
 </a>
 {% endif %}
