[Cleanup] Remove various comments and print statements

--- a/skills/templates/skills/trainingbit_view.html
+++ b/skills/templates/skills/trainingbit_view.html
@@ -176,6 +176,7 @@ $('#share-video-accept').click(function(e) {
 
 <hr>
 
+{# Include Javascript templates that render the parts of the training bit #}
 {% include 'skills/partials/trainingbit_parts.html' %}
 
 <script>
