--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -16,7 +16,7 @@ $gcl-browngray: #E8E7D6;  // Info-box
 $gcl-red: #ED1C24;
 $gcl-blue: #4B81BF;
 
-$gcl-comment-color: rgb(222, 222, 222); // Backgrounds
+$gcl-comment-color: #F4F3F1; // Background color of comments
 
 $page-buttons-overlay: absolute;
 
