[Fix] shares_overview: Fix "Recently shared" header
It was being moved by the Masonry code.

--- a/skills/templates/skills/shares_overview.html
+++ b/skills/templates/skills/shares_overview.html
@@ -21,7 +21,8 @@
 {% block javascript_extra %}
 $('#masonry-container').masonry({
   itemSelector: '.project-column',
-  gutter: '.masonry-gutter'
+  gutter: '.masonry-gutter',
+  stamp: '.stamp'
 });
 
 var updateMasonry = function() {
