[Design] Constrain width of flatpages

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -63,6 +63,7 @@
 @import "scss/user_progress";
 @import "scss/imageupload";
 @import "scss/user_info_form.scss";
+@import "scss/flatpage";
 
 %entypo {
   font-family: 'EntypoRegular';
