[Fix] Bad URL for checkmark.png
In order for it to work on all pages the URL should be an absolute path
- not relative.

--- a/global_change_lab/templates/partials/trainingbits_grid.html
+++ b/global_change_lab/templates/partials/trainingbits_grid.html
@@ -8,7 +8,7 @@
         <div class="label">{{ trainingbit.get_label_display }}</div>
       </div>
       {% if trainingbit in request.user.trainingbits_completed.all %}
-      <img class="completed-icon" src="static/images/checkmark.png">
+      <img class="completed-icon" src="/static/images/checkmark.png">
       {% endif %}
     </div>
     {% if hide_description %}
