[Add] "Unflag comment" button

--- a/global_change_lab/templates/admin_flagged_comments.html
+++ b/global_change_lab/templates/admin_flagged_comments.html
@@ -29,6 +29,13 @@
     <a href="#" class="button close info">Cancel</a>
   </div>
 
+  {#   Unflag dropdown #}
+  <div id="unflag-dropdown" class="f-dropdown" data-dropdown-content>
+    <h6>Really unflag this comment?</h6>
+    <a href="#" class="unflag button">Unflag comment</a>
+    <a href="#" class="button close info">Cancel</a>
+  </div>
+
   {# Comments section #}
   <h3>Comments</h3>
   <div class="comment-list">
