[Design] Change the icon for shares to a megaphone
+ Fix the CSS for the megaphone icon

--- a/global_change_lab/templates/partials/trainingbits_grid.html
+++ b/global_change_lab/templates/partials/trainingbits_grid.html
@@ -33,7 +33,7 @@
         <hr>
         {% if not hide_metadata %}
         <span class="icon small heart red"></span> {{ trainingbit.likes.count }}
-        <span class="icon small chat red"></span> {{ trainingbit.project_set.count }}
+        <span class="icon small megaphone red"></span> {{ trainingbit.project_set.count }}
         {% endif %}
       </div>
     </div>
