--- a/scss/entypo.scss
+++ b/scss/entypo.scss
@@ -82,7 +82,7 @@ font-style: normal;
 .icon.trophy:before{ content:'\1F3C6'; }
 .icon.tag:before{ content:'\E70C'; }
 .icon.camera:before{ content:'\1F4F7'; }
-.icon.megaphone:before{ content:'1F4E3'; }
+.icon.megaphone:before{ content:'\1F4E3'; }
 .icon.moon:before{ content:'\0045'; }
 .icon.palette:before{ content:'\1F3A8'; }
 .icon.leaf:before{ content:'\1F342'; }
