--- a/skills/templates/skills/trainingbit_cover.html
+++ b/skills/templates/skills/trainingbit_cover.html
@@ -39,7 +39,7 @@
     <div class="metadata-with-like-button">
       {% include 'skills/partials/like_counter.html' with object=trainingbit %}
       <span class="icon users red"></span><span class="count">{{ trainingbit.users_in_progress.count }}</span>
-      <span class="icon chat red"></span><span class="count">{{ trainingbit.project_set.count }}</span>
+      <span class="icon megaphone red"></span><span class="count">{{ trainingbit.project_set.count }}</span>
 
       {% include 'skills/partials/like_button.html' with object=trainingbit %}
     </div>
