[Design] new_user_input_details: Make information links red

--- a/global_change_lab/templates/new_user_input_details.html
+++ b/global_change_lab/templates/new_user_input_details.html
@@ -23,9 +23,9 @@
         more about yourself. Only your photo, username and description will be
         showed to other users and we will never, ever sell or distribute your
         personal information to third parties. If you want to read more
-        <a href="{% url 'about' %}">about this site</a>
+        <a class="red" href="{% url 'about' %}">about this site</a>
         or to the terms of service please find them
-        <a href="{% url 'terms' %}">here</a>
+        <a class="red" href="{% url 'terms' %}">here</a>
       </p>
       <p>Thank<!--s--> you ;-)</p>
     </div>
