--- a/skills/templates/skills/trainingbit_edit_content.html
+++ b/skills/templates/skills/trainingbit_edit_content.html
@@ -99,7 +99,7 @@ Offline.on('up', function() {
     <button>Add link</button>
     <a class="close-reveal-modal">&#215;</a>
   </div>
-  <div id="modal-add-picture" class="reveal-modal" data-reveal>
+  <div id="modal-add-picture" class="reveal-modal medium" data-reveal>
     <h2>Add picture</h2>
 
 
