[Cleanup] Use .edit-form instead of #training-bit-cover-form

--- a/skills/templates/skills/skill_edit.html
+++ b/skills/templates/skills/skill_edit.html
@@ -17,7 +17,7 @@
   {% endif %}
 </div>
 
-<form id="training-bit-cover-form" action="{{ request.url }}" method="post" enctype="multipart/form-data">
+<form id="skill-form" class="edit-form" action="{{ request.url }}" method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="input-field-row">
     <div class="input-field">
