--- a/skills/templates/skills/trainingbit_edit.html
+++ b/skills/templates/skills/trainingbit_edit.html
@@ -16,7 +16,7 @@
   {% endif %}
 </div>
 
-<form id="training-bit-cover-form" action="{{ request.url }}" method="post" enctype="multipart/form-data">
+<form id="trainingbit-cover-form" class="edit-form" action="{{ request.url }}" method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="input-field-row">
     <div class="input-field">
