[Design] training_edit: Add links at bottom of form
+ User stays on the same page when submitting form ("Save training bit")
+ Move page-button to bottom of form
+ Prompt user if leaving the page without saving
+ Remove unused filedrop Javascript

--- a/scss/trainingbit_edit.scss
+++ b/scss/trainingbit_edit.scss
@@ -55,3 +55,16 @@
   }
 
 }
+
+.save-actions {
+  text-align: right;
+  font-size: rem-calc(12px);
+
+  button {
+    float: none;
+  }
+
+  * {
+    margin-left: rem-calc(10px);
+  }
+}
