[Design] comment_entry_compact: Add "speaking" triangle
+ `.metadata-fat`: Move profile picture slightly to the right

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -471,6 +471,7 @@ div.gcl-column2 {
     background-size: contain;
     background-repeat: no-repeat;
     display: inline-block;
+    margin-left: 0.5rem;
     margin-right: 0.5rem;
   }
 
