--- a/skills/templates/skills/partials/comment_entry_compact.html
+++ b/skills/templates/skills/partials/comment_entry_compact.html
@@ -14,6 +14,7 @@
     {% endif %}
 
   <div class="metadata-fat">
+    <div class="triangle"></div>
     <div class="profile-picture" style="background-image: url({{ comment.author.getImage }})"></div>
     <div class="text">
       comment by <a href="{% url 'profile' comment.author.id %}">{{ comment.author.username }}</a>
